feat: add custom time signatures (#25)
* feat(ui): add ui elements for custom time signature

* chore: merge main into time-signature

* feat: enable custom time signatures

- bug: positionMarker only updates every second beat, but I don't see why
- time denominator currently has no effect. it's probably only important for setting the tempo as we only care about beatsPerBar everywhere else
- detection resolution is equal to beatsPerBar which doesn't always make sense (eg 3/4 should still detect eighths). will have to think of some logic for that

* fix: control marker

* fix: UI crash with empty frame

* chore: code cleanup

* feat: add graceful-exit shortcut (q)

* fix: #27

* fix(ui): move shortcut for graceful exit

- cmd modifier adds appropriate friction
to shortcut for quitting the app

* fix(clock): time halving

- time used to be half what it should be

* fix(ui): update posMarker correctly for eighth times

* fix: metronome for eighth times

* fix: mistake from merging

---------

Co-authored-by: Rex2002 <frahm.benjamin@gmx.de>